--- a/project/locale/lt/LC_MESSAGES/django.po
+++ b/project/locale/lt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-17 17:30+0300\n"
-"PO-Revision-Date: 2021-08-17 17:30+0300\n"
+"PO-Revision-Date: 2021-08-18 11:11+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: lt\n"
@@ -1588,7 +1588,7 @@ msgstr "Svetainės nustatymai"
 
 #: .\project\users\templates\users\settings_index.html:35
 msgid "Users"
-msgstr "Vartototjai"
+msgstr "Vartotojai"
 
 #: .\project\users\templates\users\settings_index.html:36
 msgid "Sent invite link"
