--- a/project/locale/lt/LC_MESSAGES/django.po
+++ b/project/locale/lt/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-13 08:57+0300\n"
-"PO-Revision-Date: 2021-09-10 16:21+0300\n"
+"POT-Creation-Date: 2021-09-13 09:06+0300\n"
+"PO-Revision-Date: 2021-09-13 09:06+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: lt\n"
@@ -605,7 +605,7 @@ msgid "English"
 msgstr "Anglų"
 
 #: .\project\config\settings\base.py:84
-msgid "Lithuania"
+msgid "Lithuanian"
 msgstr "Lietuvių"
 
 #: .\project\core\i18n.py:3
